
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 (rev 9xx - August XX, 2006)
====================================

* Hide sensitive debug output from the public
* [FS#425] Fix for potential Http Response Splitting Attack in sendRedirect
* [FS#336] Fixes incorrect pub_date if a time is not specified
* Little fix for outputContent since PHP5.x doesnt want newlines in header-function. 
* [FS 275] Every call to DBAPI->connect() will now create a new link, to avoid errors when connecting to multiple databases with multiple instances of DBAPI.
* New manager themeing system -- now you can completely skin the manager easily (various starting at 762)
* Added bulk Document Tree Manager to the core Modules installed. (909)
* New forgotten password auto login feature for manager users. (904 et al)
* Adding OnManagerLoginFormPrerender and OnManagerLoginFormRender plugin events to the login form and using $_REQUEST instead of $_POST in login.processor.php to support the new forgot password plugin. (902)
* [FS 322] Site export now supports Alias Paths. (thanks to Eastbind) (899)
* [FS 307] In text or textarea TVs, preserve non-English special characters by  displaying the output as HTML Entities via the htmlentities() PHP function. (thanks to Konrad) (893)
* Another modification to dbapi->escape() so that it will fall back to old method if there is no active connection to the DB. (892)
* Improving the logic on getAffectedRows and getInsertID.(891)
* Added explicit call to $this->db->connect() in executeParser() function so when using mysql_real_escape_string() before any call to $this->db->query(), you would not get an error from the mysql_real_escape_sting function because no connection was available (888)
* Removing IE-specific contextual pop-up menu... now they all get the "Mozilla one" (881)