@@ -1,6 +1,6 @@
 <?php
 $version = '0.9.5';	// Current version.
-$code_name = 'rev 1264';		// Current codename [OpenGeek:changed to SVN rev num for quick reference to repository]
+$code_name = 'rev 1265';		// Current codename [OpenGeek:changed to SVN rev num for quick reference to repository]
 $full_appname = 'MODx'.' '.$version.($code_name ? " ($code_name)":"");
 $small_version = '0';
 $patch_level = '0';
